force-app/main/default/objects/TTS_Patent__c/TTS_Patent__c.object-meta.xml
<CustomObject>
    <description>[TTS] Object for storing Patent Information</description>
    <label>Patent</label>
    <nameField>
        <displayFormat>P{00000}</displayFormat>
        <label>Patent ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Patents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>