force-app/main/default/objects/TTS_Patent__c/fields/IP_20_Month_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>IP_20_Month_Review_Date__c</fullName>
    <description>Calculated Date 20 Months from Priority Date Field.</description>
    <formula>ADDMONTHS(IP_Priority_Date__c,20)</formula>
    <inlineHelpText>The 20 Month Review Date calculated 20 Months from the Priority Date.</inlineHelpText>
    <label>20 Month Review Date</label>
    <type>Date</type>
</CustomField>