force-app/main/default/objects/TTS_Patent__c/fields/IP_30_Month_Deadline_Date__c.field-meta.xml
<CustomField>
    <fullName>IP_30_Month_Deadline_Date__c</fullName>
    <description>Calculated Date 30 Months from the Priority Date Field.</description>
    <formula>ADDMONTHS(IP_Priority_Date__c,30)</formula>
    <inlineHelpText>30 Month Deadline Date, calculated 30 months on from the Priority Date.</inlineHelpText>
    <label>30 Month Deadline Date</label>
    <type>Date</type>
</CustomField>