force-app/main/default/objects/TTS_Patent__c/fields/IP_Country__c.field-meta.xml
<CustomField>
    <fullName>IP_Country__c</fullName>
    <label>WIPO Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IP_Country</valueSetName>
    </valueSet>
</CustomField>