force-app/main/default/objects/TTS_Patent__c/fields/IP_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>IP_Country_Code__c</fullName>
    <description>Auto-generated Country Code which equals the two-letter country from the selected Country field.</description>
    <formula>SUBSTITUTE(RIGHT(TEXT(IP_Country__c),3), &quot;)&quot;, &quot;&quot;)</formula>
    <inlineHelpText>Auto-generated Country Code which equals the two-letter country from the selected Country field.</inlineHelpText>
    <label>Country Code</label>
    <type>Text</type>
</CustomField>