force-app/main/default/objects/TTS_Patent__c/fields/IP_Deadline_Date__c.field-meta.xml
<CustomField>
    <fullName>IP_Deadline_Date__c</fullName>
    <label>Filing Deadline Date</label>
    <type>Date</type>
</CustomField>