force-app/main/default/objects/TTS_Patent__c/fields/IP_End_of_Priority_Date__c.field-meta.xml
<CustomField>
    <fullName>IP_End_of_Priority_Date__c</fullName>
    <description>Auto-Calculated Field - 12 Months after the Priority Date</description>
    <formula>ADDMONTHS(IP_Priority_Date__c,12)</formula>
    <inlineHelpText>Auto-Calculated Date - 12 Months after the Priority Date</inlineHelpText>
    <label>End of Priority</label>
    <type>Date</type>
</CustomField>