force-app/main/default/objects/TTS_Patent__c/fields/IP_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>IP_Expiry_Date__c</fullName>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>