force-app/main/default/objects/TTS_Patent__c/fields/IP_Market_Findings__c.field-meta.xml
<CustomField>
    <fullName>IP_Market_Findings__c</fullName>
    <inlineHelpText>Provide information related to any Market Findings which have been found during this application.</inlineHelpText>
    <label>Market Findings</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>