force-app/main/default/objects/TTS_Patent__c/fields/IP_Patent_Advisories__c.field-meta.xml
<CustomField>
    <fullName>IP_Patent_Advisories__c</fullName>
    <inlineHelpText>Advisories sourced from Patent Attorney and additional research.</inlineHelpText>
    <label>Patent Advisories</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>