force-app/main/default/objects/TTS_Patent__c/fields/IP_Patent_Agent__c.field-meta.xml
<CustomField>
    <fullName>IP_Patent_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patent Agent</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Patents (Current Agent)</relationshipLabel>
    <relationshipName>Patents</relationshipName>
    <type>Lookup</type>
</CustomField>