force-app/main/default/objects/TTS_Patent__c/fields/IP_Patent_Application_Number__c.field-meta.xml
<CustomField>
    <fullName>IP_Patent_Application_Number__c</fullName>
    <inlineHelpText>This is the Patent Application Number, sometimes referred to as the Patent Serial Number.</inlineHelpText>
    <label>Application Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>