force-app/main/default/objects/TTS_Patent__c/fields/IP_Patent_Considerations__c.field-meta.xml
<CustomField>
    <fullName>IP_Patent_Considerations__c</fullName>
    <inlineHelpText>Enter information about considerations which have been made or found out as a result of the application process.</inlineHelpText>
    <label>Considerations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>