force-app/main/default/objects/TTS_Patent__c/fields/IP_Patent_IsGranted__c.field-meta.xml
<CustomField>
    <fullName>IP_Patent_IsGranted__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checked when the Patent Application has been granted</inlineHelpText>
    <label>Patent Granted?</label>
    <type>Checkbox</type>
</CustomField>