force-app/main/default/objects/TTS_Patent__c/fields/IP_Patent_Stage__c.field-meta.xml
<CustomField>
    <fullName>IP_Patent_Stage__c</fullName>
    <description>The current status or stage of the Patent.</description>
    <inlineHelpText>The current status or stage of the Patent.</inlineHelpText>
    <label>Patent Stage</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Yet Filed</fullName>
                <default>true</default>
                <label>Not Yet Filed</label>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>National Phase</fullName>
            </value>
            <value>
                <fullName>Granted</fullName>
            </value>
            <value>
                <fullName>Abandoned</fullName>
            </value>
            <value>
                <fullName>Lapsed</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>Never Filed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>