force-app/main/default/objects/TTS_Patent__c/fields/IP_Purchase_Order_Reference__c.field-meta.xml
<CustomField>
    <fullName>IP_Purchase_Order_Reference__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Related Purchase order reference/number where patent costs have been approved for this patent expenditure.</inlineHelpText>
    <label>Purchase Order Reference</label>
    <length>25</length>
    <type>Text</type>
</CustomField>