force-app/main/default/objects/TTS_Patent__c/fields/IP_X6_Month_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>IP_X6_Month_Review_Date__c</fullName>
    <description>Calculated Date 6 months from the Priority Date</description>
    <formula>ADDMONTHS(IP_Priority_Date__c,6)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>6 Month Review Deadline Date, which is 6 months after the Priority Date.</inlineHelpText>
    <label>6 Month Review Date</label>
    <type>Date</type>
</CustomField>