force-app/main/default/objects/TTS_Patent__c/fields/Patent_Type__c.field-meta.xml
<CustomField>
    <fullName>Patent_Type__c</fullName>
    <label>Patent Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Design</fullName>
            </value>
            <value>
                <fullName>Plant</fullName>
            </value>
            <value>
                <fullName>Provisional</fullName>
            </value>
            <value>
                <fullName>Utility</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>