force-app/main/default/objects/TTS_Patent__c/fields/X_Validation_TotalLeadApplicants__c.field-meta.xml
<CustomField>
    <fullName>X_Validation_TotalLeadApplicants__c</fullName>
    <description>Field used for validation purposes only</description>
    <inlineHelpText>Field used for validation purposes only</inlineHelpText>
    <label>X Total Lead Applicants</label>
    <summaryFilterItems>
        <field>TTS_Applicant__c.Lead_Applicant__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>TTS_Applicant__c.Patent__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>