force-app/main/default/objects/TTS_Patent__c/validationRules/TTS_Check_for_Lead_Applicants.validationRule-meta.xml
<ValidationRule>
    <fullName>TTS_Check_for_Lead_Applicants</fullName>
    <active>true</active>
    <description>Checks to ensure that there is no more than one lead applicant on a Patent.</description>
    <errorConditionFormula>X_Validation_TotalLeadApplicants__c &gt; 1</errorConditionFormula>
    <errorMessage>There can only be ONE lead applicant on a Patent Application. Please review other applicants in the list and update them as required.</errorMessage>
</ValidationRule>